// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderer/components/filters/SearchFilterSuggestions.tsx > should render itself & its children - closed 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    />
  </div>
</div>
`;

exports[`renderer/components/filters/SearchFilterSuggestions.tsx > should render itself & its children - input token invalid 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <div
        class="prc-Popover-Popover-7QIH8"
        data-caret="top-left"
        data-open=""
      >
        <div
          class="p-2 mt-2 prc-Popover-PopoverContent-2x-Aj"
          data-height="auto"
          data-width="auto"
        >
          <div
            class="prc-Stack-Stack-UQ9k6"
            data-align="stretch"
            data-direction="vertical"
            data-gap="condensed"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <div>
              <span
                class="text-xs opacity-90 prc-Text-Text-9mHv3"
              >
                Please use one of the supported filters [
                org, repo
                ]
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/components/filters/SearchFilterSuggestions.tsx > should render itself & its children - input token valid 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <div
        class="prc-Popover-Popover-7QIH8"
        data-caret="top-left"
        data-open=""
      >
        <div
          class="p-2 mt-2 prc-Popover-PopoverContent-2x-Aj"
          data-height="auto"
          data-width="auto"
        >
          <div
            class="prc-Stack-Stack-UQ9k6"
            data-align="stretch"
            data-direction="vertical"
            data-gap="condensed"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <div>
              <div
                class="prc-Stack-Stack-UQ9k6"
                data-align="stretch"
                data-direction="vertical"
                data-gap="none"
                data-justify="start"
                data-padding="none"
                data-wrap="nowrap"
              >
                <span
                  class="text-xs font-semibold prc-Text-Text-9mHv3"
                >
                  repo:
                </span>
                <span
                  class="text-xs opacity-90 prc-Text-Text-9mHv3"
                >
                  filter by repository full name
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/components/filters/SearchFilterSuggestions.tsx > should render itself & its children - open with detailed notifications enabled 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <div
        class="prc-Popover-Popover-7QIH8"
        data-caret="top-left"
        data-open=""
      >
        <div
          class="p-2 mt-2 prc-Popover-PopoverContent-2x-Aj"
          data-height="auto"
          data-width="auto"
        >
          <div
            class="prc-Stack-Stack-UQ9k6"
            data-align="stretch"
            data-direction="vertical"
            data-gap="condensed"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <div>
              <div
                class="prc-Stack-Stack-UQ9k6"
                data-align="stretch"
                data-direction="vertical"
                data-gap="none"
                data-justify="start"
                data-padding="none"
                data-wrap="nowrap"
              >
                <span
                  class="text-xs font-semibold prc-Text-Text-9mHv3"
                >
                  author:
                </span>
                <span
                  class="text-xs opacity-90 prc-Text-Text-9mHv3"
                >
                  filter by notification author
                </span>
              </div>
            </div>
            <div>
              <div
                class="prc-Stack-Stack-UQ9k6"
                data-align="stretch"
                data-direction="vertical"
                data-gap="none"
                data-justify="start"
                data-padding="none"
                data-wrap="nowrap"
              >
                <span
                  class="text-xs font-semibold prc-Text-Text-9mHv3"
                >
                  org:
                </span>
                <span
                  class="text-xs opacity-90 prc-Text-Text-9mHv3"
                >
                  filter by organization owner
                </span>
              </div>
            </div>
            <div>
              <div
                class="prc-Stack-Stack-UQ9k6"
                data-align="stretch"
                data-direction="vertical"
                data-gap="none"
                data-justify="start"
                data-padding="none"
                data-wrap="nowrap"
              >
                <span
                  class="text-xs font-semibold prc-Text-Text-9mHv3"
                >
                  repo:
                </span>
                <span
                  class="text-xs opacity-90 prc-Text-Text-9mHv3"
                >
                  filter by repository full name
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/components/filters/SearchFilterSuggestions.tsx > should render itself & its children - open without detailed notifications enabled 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <div
        class="prc-Popover-Popover-7QIH8"
        data-caret="top-left"
        data-open=""
      >
        <div
          class="p-2 mt-2 prc-Popover-PopoverContent-2x-Aj"
          data-height="auto"
          data-width="auto"
        >
          <div
            class="prc-Stack-Stack-UQ9k6"
            data-align="stretch"
            data-direction="vertical"
            data-gap="condensed"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <div>
              <div
                class="prc-Stack-Stack-UQ9k6"
                data-align="stretch"
                data-direction="vertical"
                data-gap="none"
                data-justify="start"
                data-padding="none"
                data-wrap="nowrap"
              >
                <span
                  class="text-xs font-semibold prc-Text-Text-9mHv3"
                >
                  org:
                </span>
                <span
                  class="text-xs opacity-90 prc-Text-Text-9mHv3"
                >
                  filter by organization owner
                </span>
              </div>
            </div>
            <div>
              <div
                class="prc-Stack-Stack-UQ9k6"
                data-align="stretch"
                data-direction="vertical"
                data-gap="none"
                data-justify="start"
                data-padding="none"
                data-wrap="nowrap"
              >
                <span
                  class="text-xs font-semibold prc-Text-Text-9mHv3"
                >
                  repo:
                </span>
                <span
                  class="text-xs opacity-90 prc-Text-Text-9mHv3"
                >
                  filter by repository full name
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
